force-app/main/default/objects/User/fields/Booking_Link__c.field-meta.xml
<CustomField>
    <fullName>Booking_Link__c</fullName>
    <label>Booking Link</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>