force-app/main/default/objects/User/fields/CIQ_ID__c.field-meta.xml
<CustomField>
    <fullName>CIQ_ID__c</fullName>
    <label>CIQ ID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>