force-app/main/default/objects/User/fields/Closer__c.field-meta.xml
<CustomField>
    <fullName>Closer__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Closer?</label>
    <type>Checkbox</type>
</CustomField>