force-app/main/default/objects/User/fields/First_Login_of_the_Day__c.field-meta.xml
<CustomField>
    <fullName>First_Login_of_the_Day__c</fullName>
    <label>First Login of the Day</label>
    <type>DateTime</type>
</CustomField>