force-app/main/default/objects/User/fields/ISO__c.field-meta.xml
<CustomField>
    <fullName>ISO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ISO?</label>
    <type>Checkbox</type>
</CustomField>