force-app/main/default/objects/User/fields/PhoneBurner__API_ID__c.field-meta.xml
<CustomField>
    <fullName>PhoneBurner__API_ID__c</fullName>
    <description>PhoneBurner API Key to enable PhoneBurner integration</description>
    <inlineHelpText>Login to your PhoneBurner account and visit your &quot;My Account&quot; tab to locate your API Key.</inlineHelpText>
    <label>PhoneBurner API Key</label>
    <length>64</length>
    <type>Text</type>
</CustomField>