force-app/main/default/objects/User/fields/PhoneBurner__USER_ID__c.field-meta.xml
<CustomField>
    <fullName>PhoneBurner__USER_ID__c</fullName>
    <description>Your PhoneBurner Userid is used to enable PhoneBurner integration.</description>
    <inlineHelpText>Login to your PhoneBurner account and visit your &quot;My Account&quot; tab to get your User Key</inlineHelpText>
    <label>PhoneBurner User Key</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>