force-app/main/default/objects/User/fields/Slack_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Slack_User_Id__c</fullName>
    <label>Slack User Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>