force-app/main/default/objects/User/fields/Spanish__c.field-meta.xml
<CustomField>
    <fullName>Spanish__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spanish</label>
    <type>Checkbox</type>
</CustomField>