force-app/main/default/objects/User/fields/talkdesk__IsLicensed__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__IsLicensed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is used to display if a user is a Talkdesk licensed user.</description>
    <label>Talkdesk User</label>
    <type>Checkbox</type>
</CustomField>