force-app/main/default/objects/User/fields/talkdesk__talkdeskUserId__c.field-meta.xml
<CustomField>
    <fullName>talkdesk__talkdeskUserId__c</fullName>
    <externalId>true</externalId>
    <label>Talkdesk User ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>