force-app/main/default/objects/User/fields/TwilioSF__Twilio_Personal_Number_Is_Valid__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Twilio_Personal_Number_Is_Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Twilio Personal Number Is Valid</label>
    <type>Checkbox</type>
</CustomField>