force-app/main/default/objects/User/listViews/Everyday_Debt.listView-meta.xml
<ListView>
    <fullName>Everyday_Debt</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.COMPANY_NAME</field>
        <operation>equals</operation>
        <value>Everyday Debt</value>
    </filters>
    <label>Everyday Debt</label>
</ListView>