force-app/main/default/objects/User/listViews/Next_Day_Settlement.listView-meta.xml
<ListView>
    <fullName>Next_Day_Settlement</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.COMPANY_NAME</field>
        <operation>equals</operation>
        <value>Next Day Settlement</value>
    </filters>
    <label>Next Day Settlement</label>
</ListView>